fix(mobile): center howto title text on small screens

--- a/apps/website/app/scss/components/_howto.scss
+++ b/apps/website/app/scss/components/_howto.scss
@@ -23,6 +23,10 @@
         display: flex;
         justify-content: center;
         align-items: center;
+
+        @include screen-small {
+          text-align: center;
+        }
       }
 
       &__subtitle {
